<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_main_coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- FIREBASE IMAGE -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo_auth"
            android:layout_margin="@dimen/default_large_margin" />

        <!-- APP NAME -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/default_large_margin" />

        <!-- DESCRIPTION -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_description"
            android:textSize="@dimen/default_text_size"
            android:layout_margin="@dimen/default_large_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_margin="@dimen/default_large_margin">

            <!-- LOGIN BUTTON -->
            <Button
                android:id="@+id/activity_main_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_primary_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin" />

            <!-- CHAT BUTTON -->
            <Button
                android:id="@+id/activity_main_button_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat_with_mentor"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_accent_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


