<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".controllers.activities.ProfileActivity">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- FIREBASE IMAGE -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_logo_auth" />

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/activity_profile_progress_bar"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_margin="@dimen/default_large_margin"
                android:visibility="invisible" />

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/activity_profile_image_view_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_anon_user_48dp" />

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_profile_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/text_input_username"
            android:textSize="@dimen/default_text_size" />

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/activity_profile_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_margin"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

        <!-- CHECKBOX IS USER MENTOR -->
        <CheckBox
            android:id="@+id/activity_profile_check_box_is_mentor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_box_is_mentor" />

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/activity_profile_button_update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_update_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/activity_profile_button_sign_out"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_accent_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/activity_profile_button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_error_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</LinearLayout>